[gd_scene load_steps=2 format=3 uid="uid://b0v8qxg5nhju7"]

[ext_resource type="Script" uid="uid://cf37jgs1ottia" path="res://demo/gdextension_test.gd" id="1_w4x8r"]

[node name="LiveKitAudioUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_w4x8r")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -350.0
offset_right = 300.0
offset_bottom = 350.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "ðŸŽ¤ LiveKit Voice Chat"
horizontal_alignment = 1

[node name="HSeparator1" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="ServerLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Server URL:"

[node name="ServerEntry" type="LineEdit" parent="Panel/VBoxContainer"]
layout_mode = 2
placeholder_text = "wss://your-project.livekit.cloud"

[node name="TokenLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Access Token:"

[node name="TokenEntry" type="LineEdit" parent="Panel/VBoxContainer"]
layout_mode = 2
placeholder_text = "Paste your token here"
secret = true

[node name="AutoConnectButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "âš¡ Auto Connect (Sandbox)"

[node name="ConnectButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "ðŸ”Œ Connect"

[node name="DisconnectButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "ðŸ“´ Disconnect"

[node name="StatusLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Status: Ready"
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="MicSection" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="MicTitle" type="Label" parent="Panel/VBoxContainer/MicSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "ðŸŽ¤ Microphone"

[node name="MicLevelLabel" type="Label" parent="Panel/VBoxContainer/MicSection"]
layout_mode = 2
text = "Audio Level:"

[node name="MicLevelBar" type="ProgressBar" parent="Panel/VBoxContainer/MicSection"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
show_percentage = false

[node name="ThresholdLabel" type="Label" parent="Panel/VBoxContainer/MicSection"]
layout_mode = 2
text = "Threshold: 10%"

[node name="ThresholdSlider" type="HSlider" parent="Panel/VBoxContainer/MicSection"]
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.1

[node name="MuteButton" type="Button" parent="Panel/VBoxContainer/MicSection"]
layout_mode = 2
text = "ðŸŽ¤ Mic Active"

[node name="HSeparator3" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="ParticipantsTitle" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "ðŸ‘¥ Participants (0)"

[node name="ParticipantList" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 5

[node name="SandboxHTTPRequest" type="HTTPRequest" parent="."]
